Fixed link color and WIP tape in dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -114,6 +114,10 @@ a {
 	text-decoration: none;
 }
 
+a:visited {
+	color: inherit;
+}
+
 ul,
 ol {
 	list-style: none;
